; ModuleID = '/home/carl/AnghaBench/linux/drivers/gpu/drm/msm/disp/mdp5/extr_mdp5_kms.c_mdp5_enable_commit.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/gpu/drm/msm/disp/mdp5/extr_mdp5_kms.c_mdp5_enable_commit.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.msm_kms = type { i32 }
%struct.mdp5_kms = type { %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.msm_kms*)* @mdp5_enable_commit to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @mdp5_enable_commit(%struct.msm_kms* %0) #0 {
  %2 = alloca %struct.msm_kms*, align 8
  %3 = alloca %struct.mdp5_kms*, align 8
  store %struct.msm_kms* %0, %struct.msm_kms** %2, align 8
  %4 = load %struct.msm_kms*, %struct.msm_kms** %2, align 8
  %5 = call i32 @to_mdp_kms(%struct.msm_kms* %4)
  %6 = call %struct.mdp5_kms* @to_mdp5_kms(i32 %5)
  store %struct.mdp5_kms* %6, %struct.mdp5_kms** %3, align 8
  %7 = load %struct.mdp5_kms*, %struct.mdp5_kms** %3, align 8
  %8 = getelementptr inbounds %struct.mdp5_kms, %struct.mdp5_kms* %7, i32 0, i32 0
  %9 = load %struct.TYPE_2__*, %struct.TYPE_2__** %8, align 8
  %10 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %9, i32 0, i32 0
  %11 = call i32 @pm_runtime_get_sync(i32* %10)
  ret void
}

declare dso_local %struct.mdp5_kms* @to_mdp5_kms(i32) #1

declare dso_local i32 @to_mdp_kms(%struct.msm_kms*) #1

declare dso_local i32 @pm_runtime_get_sync(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
